@@ -5,5 +5,6 @@ Felix Chang <changfkk@dds.nl>
 James H. Cloos, jr. <cloos@jhcloos.com>
 Michael Gruber <Gruber@Mathematik.HU-Berlin.DE>
 Tom Kacvinsky <tjk@ams.org>
+Jose Luu <jluu@mainsoft.com>
 Johan Vromans <jvromans@squirrel.nl>
 Matthew Woodcraft <mattheww@chiark.greenend.org.uk>
